# QueryGuard

./: .env.example  .gitignore  main.py  pyproject.toml  smoke_semantics.py
alembic/: env.py
alembic/versions/: 0a169bf0a8dd_initial_schema.py
semantic_definitions/: caesar_corp.yaml
src/app/: main.py
src/app/config/: config.yaml
src/app/core/: config.py  database.py  lifespan.py  security.py
src/app/governance/: sql_analyzer.py
src/app/semantic/: models.py  parser.py  registry.py  search.py
