[project]
name = "queryguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.94.1",
    "asyncpg>=0.31.0",
    "docker>=7.1.0",
    "fastapi>=0.135.3",
    "greenlet>=3.4.0",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
